# TERMinator

./: .gitignore  CMakeLists.txt  README.md
include/: Display.h  Equation.h  Fraction.h  Image.h  Polynomial.h  mainwindow.h
oldFiles/: compile_flags.txt  terminator.mk  terminator.project  terminator.txt
oldFiles/linearSolve/: .gitignore  CMakeLists.txt  equationWithVars.txt  equations.txt  fraction_16law13.cpp  fraction_16law13.h  linearSolve.cpp  linearSolve.h
oldFiles/mathEngine/: Equation.cpp  Equation.h  Polynomial.cpp  testEquationSolver.cpp
oldFiles/openCV_test/: main.cpp
oldFiles/recognition/: CMakeLists.txt  knn_test.py  main.cpp  test
oldFiles/test/: ABOUT.md
scripts/: runprogram.sh
src/: testplot.cpp
src/GUI/: mainwindow.cpp
src/GUI/image/: Image.cpp  main.cpp  otsuTransform.cpp
src/capture/: test.cpp
src/display/: Makefile.txt  display.cpp  display.h  example.cpp  graph.cpp
src/display/V2/: CMakeLists.txt  Display.cpp  Display.h  main.cpp
src/display/V3/: CMakeLists.txt  Display.cpp  main.cpp
src/equationSolverV2/: CMakeLists.txt  Equation.cpp  Fraction.cpp  Polynomial.cpp  Source.cpp  testEquationSolver.cpp
testing/: TERMINATOR
